--- a/ytweb/tabstrip.htm
+++ b/ytweb/tabstrip.htm
@@ -3,7 +3,7 @@
 <meta http-equiv=Content-Type content="text/html; charset=gb2312">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
-<link id=Main-File rel=Main-File href="../云听ytweb域名汇总.htm">
+<link id=Main-File rel=Main-File href="../ytweb">
 
 <script language="JavaScript">
 <!--
@@ -24,7 +24,7 @@ A {
 <body topmargin=0 leftmargin=0 bgcolor="#808080">
 <table border=0 cellspacing=1>
  <tr>
- <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet001.htm" target="frSheet"><font face="宋体" color="#000000">Sheet1</font></a>&nbsp;</small></small></b></td>
+ <td bgcolor="#FFFFFF" nowrap><b><small><small>&nbsp;<a href="sheet001.htm" target="frSheet"><font face="脣脦脤氓" color="#000000">Sheet1</font></a>&nbsp;</small></small></b></td>
 
  </tr>
 </table>
